[package]
name = "winc"
version = "0.0.0"
edition = "2021"
authors = ["TeamDman"]
description = "placeholder - windows screen capture"
license = "MPL-2.0"
repository = "https://github.com/TeamDman/winc"
homepaghe = "https://github.com/TeamDman/winc"
readme = "README.md"
keywords = ["winc","windows","screen-capture"]

[dependencies]
