[package]
name = "winc"
version = "0.2.0"
edition = "2021"
authors = ["TeamDman"]
description = "Windows screen capture"
license = "MPL-2.0"
repository = "https://github.com/TeamDman/winc"
homepaghe = "https://github.com/TeamDman/winc"
readme = "README.md"
keywords = ["winc", "windows", "screen-capture"]

[dependencies]
fxhash = "0.2.1"
image = "0.25.1"
indexmap = "2.2.6"
widestring = "1.1.0"
windows = { version = "0.58.0", features = ["Win32","Win32_Graphics","Win32_Graphics_Gdi"] }
